<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/ic_search_white"
        android:title="@string/discover" />

    <item
        android:id="@+id/recordVideoFragment"
        android:icon="@drawable/create_video_icon"
        android:title="@string/create_video" />
    <item
        android:id="@id/inbox_fragment"
        android:icon="@drawable/ic_inbox"
        android:title="@string/inbox" />

    <item
        android:id="@+id/meFragment"
        android:icon="@drawable/ic_identity"
        android:title="@string/me" />

</menu>