<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/sign_up_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close_page"
        android:padding="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_close" />

    <TextView
        android:id="@+id/sign_up_for_tiktok_plain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/sign_up_for_tiktok"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/sign_up_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cabin"
        android:maxWidth="@dimen/_280sdp"
        android:text="@string/sign_up_description_text"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_for_tiktok_plain_text"
        app:layout_constraintStart_toStartOf="@+id/sign_up_for_tiktok_plain_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_for_tiktok_plain_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_use_phone_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="16dp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:text="@string/use_phone_or_email"
        android:textAllCaps="false"
        android:textColor="@color/dark_black"
        app:cornerRadius="@dimen/_4sdp"
        app:icon="@drawable/ic_sign_up_dude"
        app:iconGravity="start"
        app:iconSize="@dimen/_40sdp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_facebook_btn"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_description_text"
        app:layout_constraintStart_toStartOf="@+id/sign_up_description_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_description_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_facebook_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="#4267B2"
        android:drawableStart="@drawable/com_facebook_button_login_logo"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_google_btn"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_use_phone_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_use_phone_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_use_phone_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_google_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_4sdp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_twitter_btn"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_facebook_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_facebook_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_facebook_btn" />

    <com.andre_max.tiktokclone.presentation.ui.custom_views.CustomTwitterLoginButton
        android:id="@+id/sign_up_twitter_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_tos_text"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_google_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_google_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_google_btn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#EFE4E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sign_up_already_have_account_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/already_have_an_account"
            android:textColor="@color/dark_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up_log_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/_4sdp"
            android:text="@string/log_in"
            android:textColor="@color/pinkBtnBackground"
            app:layout_constraintBottom_toBottomOf="@+id/sign_up_already_have_account_plain_text"
            app:layout_constraintStart_toEndOf="@+id/sign_up_already_have_account_plain_text"
            app:layout_constraintTop_toTopOf="@+id/sign_up_already_have_account_plain_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sign_up_tos_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/sign_up_tos"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_use_phone_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_use_phone_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>